--- a/app/views/patterns/_emulation.html.erb
+++ b/app/views/patterns/_emulation.html.erb
@@ -13,10 +13,17 @@
   (ここにライフゲームが表示されます)
 </p>
 
+
 <!--gonデータ受け渡し用のJSタグ生成-->
 <%= include_gon %>
-<!--呼び出し時の画面整形-->
+
+
 <script type="text/javascript">
+  /*
+  * =============================
+  * 呼び出し時の画面整形処理
+  * =============================
+  */
   $(function(){
     // カテゴリ欄の削除
     $(".application__layouts--leftSection").remove();
