--- a/app/assets/stylesheets/user/makings.scss
+++ b/app/assets/stylesheets/user/makings.scss
@@ -43,6 +43,9 @@
     }
     &--labelBox {
       padding: 10px 20px 10px 20px;
+      label {
+        cursor: pointer;
+      }
     }
     &--inputLabel {
       height: 2.5em;
