Add column name on japanese by edit ja.ymal. Update validates.

--- a/app/assets/stylesheets/user/makings.scss
+++ b/app/assets/stylesheets/user/makings.scss
@@ -29,9 +29,8 @@
     &--sectionC {
       display: none;
     }
-    &--caution {
-      color: red;
-      font-weight: 500;
+    &--info {
+      font-weight: bold;
       line-height: 1.3em;
       text-align: center;
     }
