--- a/app/views/admin/members/_profile.html.erb
+++ b/app/views/admin/members/_profile.html.erb
@@ -3,7 +3,7 @@
 <!--プロフィール画像-->
 <div class="members__show--divLeft">
   <%= link_to member_path( user ) do %>
-  <%= attachment_image_tag user, :profile_image, fallback: "no_image.jpg", class: "members__show--img" %>
+  <%= attachment_image_tag user, :profile_image, fallback: asset_path( "no_image.jpg" ), class: "members__show--img" %>
   <% end %>
 </div>
 
