--- a/app/views/display_formats/_form.html.erb
+++ b/app/views/display_formats/_form.html.erb
@@ -19,7 +19,7 @@
 <!--セルの表示定義-->
 <div class="form-group">
   <label class="col-sm-2 control-label">
-    <%= content_tag :span, '', class: "glyphicon glyphicon-th-large",aria: { hidden: true } %>
+    <%= content_tag :i, '', class: "fas fa-font" %>
     セルの表示
   </label>
   <div class="col-sm-10">
