Edit admin ssession views

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -77,3 +77,22 @@
      }
    }
  }
+
+ .devise {
+   &__errors {
+     &--ul {
+       margin: 30px;
+       text-align: center;
+     }
+   }
+   &__common {
+     margin: 50px auto;
+     padding: 10px 30px;
+     background: radial-gradient( white, silver );
+     border: medium solid #888;
+     border-radius: 20px;
+     &--headline {
+       margin: 1em 20px;
+     }
+   }
+ }
