--- a/app/views/admin/layouts/_debug_section.html.erb
+++ b/app/views/admin/layouts/_debug_section.html.erb
@@ -6,7 +6,7 @@
     </li>
     <li>
       <h4>開発環境用めーる</h4>
-      <%= link_to "LetterOpener", '/letter_opener', class: "btn btn-default" %>
+      <%= link_to "LetterOpener", '/ja/letter_opener', class: "btn btn-default" %>
     </li>
   </ul>
 </nav>
