--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -89,6 +89,9 @@
    right: 0;
    text-align: left;
    background-color: white;
+   &:hover {
+     display: block;
+   }
    li {
      display: block;
      width: 180px;
