--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,28 @@
-<h2>Change your password</h2>
+<div class="form-horizontal devise__common">
+  <h2 class="devise__common--headline">パスワードの再設定</h2>
+  <p>新しいパスワードを入力してください。</p>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+  <%= form_for( resource, as: resource_name, url: user_password_path, html: { method: :put, local: :ja } ) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+  <div class="form-group">
+    <div class="col-sm-2">
+      <%= f.label :password, 'パスワード' %>
+      <% if @minimum_password_length then %>
+      <br><%= "（#{@minimum_password_length}文字以上）" %>
+      <% end %>
+    </div>
+    <%= f.password_field :password, autocomplete: "new-password", class: "col-sm-3 registrations__new--form" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group">
+    <%= f.label :password_confirmation, 'パスワード再入力', class: "col-sm-2" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "col-sm-3 registrations__new--form" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <p class="passwords__new--submitForm">
+    <%= f.submit "パスワードを変更する", class: "btn btn-success" %>
+  </p>
+  <% end %>
+</div>
