--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <h2 class="devise__common--headline">パスワード再発行</h2>
   <p>アカウントのメールアドレスを入力して「パスワードを変更する」を押してください。</p>
 
-<%= form_for( resource, as: resource_name, url: user_password_path, html: { method: :post } ) do |f| %>
+  <%= form_for( resource, as: resource_name, url: user_password_path, html: { method: :post, local: :ja  } ) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="form-group">
@@ -13,7 +13,7 @@
   <p class="passwords__new--submitForm">
     <%= f.submit "パスワードを変更する", class: "btn btn-warning" %>
   </p>
-<% end %>
+  <% end %>
 
-<%= render "users/shared/links" %>
+  <%= render "users/shared/links" %>
 </div>
