--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <%= content_tag :i, '', class: "fas fa-user-plus" %>
     新規ユーザ登録
   </h2>
-  <%= form_for( resource, as: resource_name, url: user_registration_path ) do |f| %>
+  <%= form_for( resource, as: resource_name, url: user_registration_path, html: { local: :ja  } ) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="form-group">
