--- a/app/views/display_formats/new.html.erb
+++ b/app/views/display_formats/new.html.erb
@@ -1,4 +1,5 @@
 <!--投稿フォームの呼び出し-->
+<h3>新規セル表示形式の作成</h3>
 <%= render 'display_formats/form', display_format: @display_format %>
 <%= render 'display_formats/call_edit', display_formats: @display_formats %>
 
