--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -16,6 +16,7 @@
 	<div class="tab-pane makings__edit--tabCommon active" id="sampleContentA">
 		<!--提出前・動作チェック前パターンの適性チェック用アクション-->
 		<h4>保存・投稿メニュー</h4>
+		<h6>「検証」を通過、一時保存したパターンは投稿・公開が可能になります。</h6>
 		<button type="button" class="btn btn-primary makings__edit--verification" onclick="verificationMakingPattern();">
 			検証
 		</button>
