--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -5,7 +5,7 @@
   <%= form_with( model: @making, url: making_path, method: "patch", class: "form-horizontal" ) do | f | %>
   <!--ページ上部のタイトル-->
   <h3>
-    パターン編集エリア
+    パターン編集機能
     <%= render 'makings/edit_helper', f: f %>
   </h3>
 
@@ -21,11 +21,9 @@
   </div>
 
   <!--作成中パターンの編集エリア-->
-  <%= f.text_area :making_text,
-  value: build_up_bit_strings_from( @making ).join( "\n" ),
-  class: "makings__edit--textarea",
-  rows: ( 1 + @making.margin_top + @making.margin_bottom + ( @making.normalized_rows_sequence&.count( ?, ) || 0 ) ),
-  type: 'number' %>
+  <h3>パターン編集エリア</h3>
+  <h6>編集エリアは右下のつまみにて高さの調整が可能です。</h6>
+  <%= f.text_area :making_text, value: build_up_bit_strings_from( @making ).join( "\n" ), class: "makings__edit--textarea", type: 'number' %>
   <% end %>
 </div>
 
