--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,21 +1,29 @@
 <p><%= @resource.name %>様</p>
 
 <p>
-  パスワード変更のリクエストを受諾しました。<br>
-  下記リンクより変更できます。
+  パスワード再発行のリクエストを受諾しました。<br>
+  下記リンクより変更できます。<br>
+  <span class="passwords__edit--info">
+    パスワード再発行は、本メールが送信されてから１時間以内に行ってください。<br>
+    再度実施したい場合は、パスワード再発行リクエストを行ってください。
+  </span>
 </p>
 
 <p>
-  <%= link_to 'パスワードの変更', edit_password_url( @resource, reset_password_token: @token ) %>
+  <% if Rails.env.production? then %>
+  <%= link_to 'パスワード再発行', edit_password_url( @resource, reset_password_token: @token, protocol: 'https' ), class: "btn btn-success" %>
+  <% else %>
+  <%= link_to 'パスワード再発行', edit_password_url( @resource, reset_password_token: @token ), class: "btn btn-success" %>
+  <% end %>
 </p>
 
 <p>
-  もしパスワードの変更リクエストをしていないのであれば、 <br>
+  もしパスワード再発行のリクエストを行っていないのであれば、 <br>
   本メールは無視していただいて構いません。
 </p>
 
 <p>
-  もし変更をしないのであれば、本メールは削除しても構わないです。
+  もし再発行をしないのであれば、本メールは削除しても構わないです。
   または、本メールに心当たりが無い方に着きましても、本メールは削除しても構わないです。
 </p>
 <p>Play!Create!Publish! LifeGame 管理者より</p>
