--- a/app/assets/stylesheets/admin/members.scss
+++ b/app/assets/stylesheets/admin/members.scss
@@ -15,6 +15,10 @@
       width: 70%;
       vertical-align: bottom;
     }
+    &--bottom {
+      float: left;
+      text-align: right;
+    }
     &--img {
       background-color: black;
       max-height: 150px;
