--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -117,12 +117,6 @@
  }
 
  .devise {
-   &__errors {
-     &--ul {
-       margin: 30px;
-       text-align: center;
-     }
-   }
    &__common {
      padding: 10px 30px;
      background: radial-gradient( white, silver );
@@ -170,6 +164,14 @@
      }
      &:focus {
        color: midnightblue;
+     }
+   }
+ }
+
+ #error_explanation {
+   ul {
+     li {
+       margin-left: 50px;
      }
    }
  }
