--- a/app/views/display_formats/edit.html.erb
+++ b/app/views/display_formats/edit.html.erb
@@ -1,4 +1,5 @@
 <!--投稿フォームの呼び出し-->
+<h3>作成済セル表示形式の編集</h3>
 <%= render 'display_formats/form', display_format: @display_format %>
 
 <!--ライフゲームエミュレート画面-->
