--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -1,12 +1,15 @@
 <% if resource.errors.any? %>
   <div id="error_explanation">
+    <% unless %w( passwords sessions ).include?( controller_name ) then %>
     <h2>
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul class="devise__errors--ul">
+    <% end %>
+    
+    <ul>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
