--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>PlayCreatePublishLifeGame_管理者</title>
-  <%= favicon_link_tag "favicon2.ico" %>
+  <%= favicon_link_tag( asset_path( "favicon2.ico" ) ) %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
