--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Play!Create!Publish! LifeGame</title>
-  <%= favicon_link_tag "favicon1.ico" %>
+  <%= favicon_link_tag( asset_path( "favicon1.ico" ) )%>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag    "user", media: "all", "data-turbolinks-track": "reload" %>
