Building pattern coupling at Makings#edit.

--- a/app/assets/stylesheets/user/patterns.scss
+++ b/app/assets/stylesheets/user/patterns.scss
@@ -43,6 +43,9 @@
     &--alignRight {
       text-align: right;
     }
+    &--coupler {
+      color: magenta;
+    }
   }
   &__show {
     width: 100%;
