--- a/app/views/makings/new.html.erb
+++ b/app/views/makings/new.html.erb
@@ -28,8 +28,7 @@
 <div class="col-sm-6 makings__new--sectionB">
   <h3 class="makings__new--headline">プレビュー表示</h3>
 
-  <div id="crop_preview" overflow="hidden">
-  </div>
+  <div id="crop_preview" overflow="hidden"></div>
 
   <div class="makings__new--changeButton">
     <button type="button" name="button" onclick="changeBinarizationMode(this);" class="btn btn-info">
