--- a/app/views/patterns/_emulation.html.erb
+++ b/app/views/patterns/_emulation.html.erb
@@ -9,9 +9,12 @@
   (ここに世代情報が表示されます)
 </p>
 
-<p class="patterns__show--lifeGameDisplay">
-  (ここにライフゲームが表示されます)
-</p>
+<div style="background-color: black;">
+  <p class="patterns__show--lifeGameDisplay">
+    (ここにライフゲームが表示されます)
+  </p>
+</div>
+
 
 
 <!--gonデータ受け渡し用のJSタグ生成-->
