--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -152,7 +152,7 @@
 				<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 				手順１：投稿済みパターンから選択
 			</h5>
-			<%= select_tag( 'coupler_selection', options_for_select( Pattern.get_index ), class: "form-control", onchange: "changeCouplingMode('select');", prompt: " --- 選択してください --- " ) %>
+			<%= select_tag( 'coupler_selection', options_for_select( Pattern.get_index ), class: "form-control", onchange: "changeCouplingMode('select', this.value);", prompt: " --- 選択してください --- " ) %>
 			<p class="makings__edit--couplingButtonPosition">
 				<span class="makings__edit--couplerAvailable"></span>
 				<button type="button" name="button" onclick="changeCouplingMode('start');" class="btn btn-originPink makings__edit--startCoupling" disabled>
@@ -170,6 +170,7 @@
 			</h5>
 			<ul>
 				<li>「方向キー」で移動できます。</li>
+				<li>「option(⌥)キー」＋「方向キー」でその方向に10セルずつ移動できます。（windowsの場合は「Altキー」＋「方向キー」）</li>
 				<li>「shiftキー」＋「方向キー」でその方向に反転できます。</li>
 				<li>「"r"キー」で反時計回りに９０°回転ができます。</li>
 				<li>置き場所が決まったら「完了」ボタンを押してください。</li>
@@ -179,7 +180,7 @@
 					中止
 				</button>
 				<button type="button" name="button" onclick="changeCouplingMode('finish');" class="btn btn-primary">
-					完了
+					設置
 				</button>
 			</p>
 		</div>
